--- a/src/pages/[language]/location.astro
+++ b/src/pages/[language]/location.astro
@@ -63,9 +63,44 @@ iframe {
     <main transition:animate="slide" class="justify-center">
             <h1>{selectedLanguage?.data.location}</h1>
     <div class="address">
-      <p><strong>{selectedLanguage?.data.address}</strong></p>
-      <p>Hovedgaden 16 and 31A, Femmøller Strand,
-      </br> 8400 Ebeltoft</p>
+      <!-- <p><strong>{selectedLanguage?.data.address}</strong></p> -->
+      <!-- <p>Hovedgaden 16 and 31A, Femmøller Strand,
+      </br> 8400 Ebeltoft</p> -->
+      <p><strong>
+        Come celebrate with us at Molskroen, the cozy spot where Diana and Mick first said "yes" amidst the stunning viewes of Mols Bjerge National Park. 
+      </strong>
+        </p>
+        <p>
+Tucked away in Denmark's heartland, this is where our love story began, and we want our nearest and dearest by our side to mark this special moment. Picture-perfect beaches, rolling hills, and lush woodlands – Mols Bjerge has it all and it has been the groom's favorite spot for the longest time. 
+      </p>
+      <p>
+
+And while we're surrounded by nature's beauty, we're also just a hop away from the ferry and the airport, making it easy for everyone to join in the celebration. If time allows, we recommend to explore the charming streets of Ebeltoft, visit historic sites like the Frigate Jylland and Kalø castle ruin, or simply soak in the natural beauty of the national park. 
+</p>
+<p>
+So, grab your dancing shoes and your sense of adventure, because we can't wait to share this magical day with you in the place where it all began!
+</p>
+<p>
+<p><strong>
+Molskroen and Molskroen Strandhotel
+</strong>
+</p>
+The ceremony, reception and party will take place at Molskroen hotel, located at Hovedgaden 16 and 31A, Femmøller Strand,8400 Ebeltoft.  
+</p>
+<p>
+Just 5 minutes away, you can find its sister hotel at Hovedgaden 31a, Femmøller Strand DK - 8400 Ebeltoft.
+</p>
+<p>
+If you would like to overnight at one of these hotels, please send your inquiry by email at .. or give them a call at ... for booking. For a discounted price please remember to mention that your booking is in relation to our wedding. 
+</p>
+<p>
+  <strong>
+Available accomodation types:
+</strong>
+</br>
+TBD
+</p>
+      </p>
     </div>
         </main>
       <Footer/>
